[package]
name = "discordbot"
version = "0.1.0"
authors = ["Marek Veselý <veselym@spstrutnov.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.2"
serde_json = "1"
log = "0.4"
fast_log="1.3"
bigdecimal = "0.2"
diesel = { version = "1.4.4", features = ["postgres", "numeric", "r2d2"] }
lazy_static = "1.4.0"
humantime = "2.1.0"
reqwest = { version = "0.11", features = ["json"] }

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
version = "0.10"
features = ["cache", "framework", "standard_framework", "rustls_backend"]
